--- a/index.html
+++ b/index.html
@@ -1,123 +1,228 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistem Informasi Kesehatan</title>
+    <title>Website Sistem Informasi Kesehatan</title>
     <link
       rel="shortcut icon"
-      href="/assets/images/logo.webp"
-      type="image/webp"
+      href="./assets/images/logo.webp"
+      type="image/x-icon"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <!-- Header -->
-    <header class="bg-info text-white py-4">
-      <div class="container d-flex justify-content-between align-items-center">
-        <img src="assets/images/logo.webp" alt="Logo" class="logo" />
-        <ul class="list-unstyled mb-0 d-flex">
-          <li class="mx-3 text-center">
-            <strong>TUGAS</strong><br />SISTEM INFORMASI KESEHATAN
-          </li>
-          <li class="mx-3 text-center">
-            <strong>NAMA</strong><br />SYARIFAH THALHAH ASYATHRY
-          </li>
-          <li class="mx-3 text-center"><strong>NPM</strong><br />211060007</li>
-        </ul>
-      </div>
+    <header>
+      <img
+        src="./assets/images/logo.webp"
+        alt="Logo Website Sistem Informasi Kesehatan"
+      />
+      <h1>WEBSITE SISTEM INFORMASI KESEHATAN</h1>
+      <p>
+        Menyajikan informasi terkait pengembangan sistem informasi kesehatan.
+      </p>
     </header>
 
-    <!-- Welcome Sectio n -->
-    <section class="container text-center py-5">
-      <div class="card shadow">
-        <div class="card-body">
-          <h1 class="display-4 text-primary fw-bold">SELAMAT</h1>
-          <p class="lead text-center">Di Website Sistem Informasi Kesehatan</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Main Content -->
-    <main class="container my-5">
-      <div class="card shadow">
-        <div class="card-body">
-          <h2 class="text-success">Pengembangan Sistem Informasi Kesehatan</h2>
-          <p class="text-justify">
-            Sistem informasi kesehatan adalah sebuah jaringan informasi yang
-            memungkinkan pengumpulan, pengelolaan, penyimpanan, dan analisis
-            data terkait kesehatan secara efektif dan efisien. Menurut WHO
-            (World Health Organization), sistem informasi kesehatan dirancang
-            untuk mendukung pengambilan keputusan di berbagai tingkat pelayanan
-            kesehatan dan kebijakan publik. WHO menyatakan bahwa sistem ini
-            bukan hanya mencakup perangkat keras dan perangkat lunak, tetapi
-            juga elemen manusia, prosedur, serta mekanisme pengelolaan data yang
-            berkesinambungan. Dengan adanya sistem informasi kesehatan, data
-            yang akurat dan up-to-date dapat disediakan bagi tenaga medis,
-            pembuat kebijakan, dan institusi kesehatan, sehingga memungkinkan
-            perencanaan dan pengambilan keputusan yang lebih baik.
-            <br />
-            Para ahli kesehatan seperti Richard Wootton dan T. R. Shannon
-            menyebutkan bahwa sistem informasi kesehatan modern berperan penting
-            dalam mendorong efisiensi layanan kesehatan melalui digitalisasi
-            data pasien dan penggunaan teknologi informasi terkini. Wootton
-            menekankan pentingnya aspek keterpaduan dalam sistem ini, sehingga
-            data dari berbagai fasilitas kesehatan dapat saling terhubung untuk
-            memastikan kesinambungan layanan pasien. Melalui keterpaduan
-            tersebut, berbagai layanan medis bisa diakses dengan lebih mudah dan
-            cepat, mempercepat diagnosis, dan meminimalkan risiko kesalahan
-            dalam pemberian layanan.
-            <br />
-            Menurut DeLone dan McLean (2003), efektivitas sistem informasi
-            kesehatan juga bergantung pada kualitas sistem itu sendiri, kualitas
-            informasi yang dihasilkan, serta kemudahan penggunaannya oleh tenaga
-            medis. Mereka mengembangkan model sukses yang menunjukkan bahwa
-            sistem yang baik harus mampu memberikan informasi yang relevan,
-            tepat waktu, dan akurat sesuai kebutuhan pengguna. DeLone dan McLean
-            juga mencatat bahwa keberhasilan sistem informasi kesehatan sangat
-            tergantung pada kemampuannya untuk diintegrasikan dengan sistem lain
-            serta dukungan dari para pemangku kepentingan, termasuk manajemen
-            rumah sakit dan pemerintah.
-            <br />
-            Pentingnya sistem informasi kesehatan dalam pelayanan publik juga
-            didukung oleh pendapat James R. Beniger, yang menyatakan bahwa
-            sistem ini dapat meningkatkan kualitas pelayanan kesehatan dengan
-            mengoptimalkan data yang ada untuk analisis epidemiologi, pelaporan
-            penyakit, serta pemantauan kesehatan masyarakat. Beniger juga
-            menyoroti bahwa sistem informasi kesehatan berperan sebagai alat
-            utama dalam pencegahan dan pengendalian penyakit, terutama di masa
-            pandemi atau wabah. Melalui pemanfaatan teknologi informasi yang
-            tepat, sistem ini mampu mendeteksi, melacak, dan merespons
-            penyebaran penyakit lebih cepat, yang pada akhirnya dapat menurunkan
-            angka morbiditas dan mortalitas di masyarakat.
-          </p>
-          <h3 class="mt-4">Model Pengembangan Sistem</h3>
-          <p>
-            Model yang digunakan dalam pengembangan sistem informasi kesehatan
-            adalah <strong>Waterfall</strong>. Berikut ilustrasi prosesnya:
-          </p>
-          <div class="text-center">
-            <img
-              src="assets/images/waterfall.webp"
-              alt="Model Waterfall"
-              class="img-fluid rounded shadow-lg"
-            />
+    <div class="container mt-5">
+      <div class="row mb-4">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">
+                PENGEMBANGAN SISTEM INFORMASI KESEHATAN
+              </h3>
+              <p class="card-text">
+                Sistem Informasi Kesehatan merupakan salah satu elemen penting
+                dalam upaya meningkatkan kualitas layanan kesehatan. Dengan
+                memanfaatkan teknologi informasi, pengumpulan, pengolahan, dan
+                penyajian data kesehatan dapat dilakukan dengan lebih efektif
+                dan efisien. Sistem ini mencakup berbagai aspek, mulai dari
+                rekam medis elektronik, manajemen rumah sakit, hingga sistem
+                pengawasan kesehatan masyarakat.
+              </p>
+              <p class="card-text">
+                Implementasi yang baik memerlukan kolaborasi antara tenaga
+                kesehatan, pengembang sistem, dan pihak terkait lainnya untuk
+                memastikan sistem ini dapat memenuhi kebutuhan pengguna dan
+                mendukung pengambilan keputusan yang tepat.
+              </p>
+              <p class="card-text">
+                Salah satu contoh implementasi sistem ini adalah penerapan rekam
+                medis elektronik yang memudahkan dokter dalam mengakses riwayat
+                kesehatan pasien secara real-time. Hal ini tidak hanya
+                mengurangi risiko kesalahan medis, tetapi juga meningkatkan
+                efisiensi waktu dan biaya dalam proses pengobatan.
+              </p>
+              <p class="card-text">
+                Selain itu, pengembangan sistem informasi kesehatan juga
+                mencakup pengawasan kesehatan masyarakat, seperti pemantauan
+                kasus penyakit menular dan pelaporan vaksinasi. Dengan
+                sistematisnya pengolahan data kesehatan, dapat diperoleh
+                informasi yang akurat untuk mendukung kebijakan kesehatan yang
+                lebih baik.
+              </p>
+              <p class="card-text">
+                Penggunaan sistem informasi kesehatan juga semakin penting dalam
+                menghadapi tantangan global, seperti pandemi COVID-19. Dengan
+                teknologi yang terintegrasi, data kesehatan masyarakat dapat
+                dipantau secara efisien, dan respons terhadap krisis kesehatan
+                dapat dilakukan dengan cepat dan tepat.
+              </p>
+            </div>
           </div>
         </div>
       </div>
-    </main>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3">
-      <p>
-        &copy; 2024 SISTEM INFORMASI KESEHATAN | UNIVERSITAS RESPATI INDONESIA
-      </p>
+      <div class="row mb-4">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">MODEL PENGEMBANGAN SISTEM</h3>
+              <p class="card-text">
+                Dalam pengembangan sistem informasi, terdapat beberapa model
+                yang umum digunakan untuk mendefinisikan tahapan pengembangan
+                sistem. Beberapa model yang sering digunakan dalam
+                <strong>Software Development Life Cycle (SDLC)</strong> adalah
+                sebagai berikut:
+              </p>
+
+              <h5>1. MODEL WATERFALL</h5>
+              <p class="card-text">
+                Model Waterfall adalah salah satu model SDLC yang paling klasik
+                dan pertama kali dikembangkan. Model ini mengikuti pendekatan
+                linier, di mana setiap fase harus diselesaikan sepenuhnya
+                sebelum melanjutkan ke fase berikutnya. Tahapan yang ada dalam
+                model Waterfall adalah:
+              </p>
+              <ul>
+                <li>
+                  <strong>Analisis Kebutuhan:</strong> Menganalisis dan
+                  mendokumentasikan kebutuhan pengguna.
+                </li>
+                <li>
+                  <strong>Desain Sistem:</strong> Mendesain arsitektur sistem
+                  berdasarkan kebutuhan yang telah dianalisis.
+                </li>
+                <li>
+                  <strong>Pengembangan:</strong> Implementasi desain ke dalam
+                  kode sumber perangkat lunak.
+                </li>
+                <li>
+                  <strong>Pengujian:</strong> Melakukan pengujian terhadap
+                  perangkat lunak untuk memastikan semua fungsi bekerja sesuai
+                  dengan yang diinginkan.
+                </li>
+                <li>
+                  <strong>Implementasi:</strong> Meluncurkan perangkat lunak ke
+                  lingkungan produksi.
+                </li>
+                <li>
+                  <strong>Pemeliharaan:</strong> Melakukan pemeliharaan dan
+                  perbaikan setelah perangkat lunak digunakan.
+                </li>
+              </ul>
+              <p class="card-text">
+                Kelebihan model Waterfall adalah kesederhanaan dan kemudahan
+                dalam pengelolaan proyek, namun kelemahannya adalah kurangnya
+                fleksibilitas untuk melakukan perubahan setelah fase awal.
+              </p>
+              <img
+                src="./assets/images/waterfall.png"
+                alt="Model Waterfall"
+                class="img-fluid mb-4"
+              />
+
+              <h5>2. MODEL AGILE</h5>
+              <p class="card-text">
+                Model Agile adalah pendekatan yang lebih fleksibel dan iteratif
+                dalam pengembangan perangkat lunak. Model ini lebih fokus pada
+                kolaborasi tim dan adaptasi cepat terhadap perubahan.
+                Pengembangan dilakukan dalam siklus pendek yang disebut
+                <em>sprint</em>, di mana tim mengembangkan bagian perangkat
+                lunak tertentu dalam waktu singkat, lalu melakukan evaluasi dan
+                perbaikan sebelum melanjutkan ke bagian berikutnya.
+              </p>
+              <p class="card-text">
+                Agile lebih cocok untuk proyek yang dinamis dengan kebutuhan
+                yang dapat berubah seiring waktu. Beberapa metodologi Agile yang
+                populer adalah Scrum, Kanban, dan Extreme Programming (XP).
+              </p>
+              <img
+                src="./assets/images/metode-agile.png"
+                alt="Model Agile"
+                class="img-fluid mb-4"
+              />
+
+              <h5>3. MODEL PROTOTYPE</h5>
+              <p class="card-text">
+                Model Prototype adalah pendekatan di mana prototipe sistem awal
+                dibuat dan diuji oleh pengguna untuk mendapatkan umpan balik
+                mengenai fungsionalitas dan desainnya. Prototipe tersebut
+                kemudian diperbaiki dan disempurnakan berdasarkan umpan balik
+                hingga menghasilkan sistem yang final. Model ini cocok untuk
+                proyek yang memiliki kebutuhan yang tidak jelas pada awalnya
+                atau berubah secara dinamis.
+              </p>
+              <p class="card-text">
+                Dalam pengembangan sistem menggunakan model Prototype, terdapat
+                beberapa tahapan, yaitu:
+              </p>
+              <ul>
+                <li>
+                  <strong>Pembuatan Prototipe:</strong> Membuat model awal dari
+                  sistem yang akan dikembangkan.
+                </li>
+                <li>
+                  <strong>Umpan Balik Pengguna:</strong> Menguji prototipe
+                  dengan pengguna dan memperoleh umpan balik.
+                </li>
+                <li>
+                  <strong>Penyempurnaan Prototipe:</strong> Memperbaiki dan
+                  menyempurnakan prototipe berdasarkan umpan balik.
+                </li>
+                <li>
+                  <strong>Implementasi:</strong> Setelah prototipe final, sistem
+                  dikembangkan dan diluncurkan.
+                </li>
+              </ul>
+              <img
+                src="./assets/images/Model Prototype.png"
+                alt="Model Prototype"
+                class="img-fluid mb-4"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row mb-4">
+        <div class="col-md-12">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">DATA DIRI</h3>
+              <div class="data-diri">
+                <h5>TUGAS :</h5>
+                <p class="card-text">SISTEM INFORMASI KESEHATAN</p>
+
+                <h5>NAMA :</h5>
+                <p class="card-text">SYARIFAH THALHAH ASYATHRY</p>
+
+                <h5>NPM :</h5>
+                <p class="card-text">211060007</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer terpisah di luar card artikel -->
+    <footer>
+      <p>&copy; 2024 Sistem Informasi Kesehatan</p>
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
